--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fastmcp",
+  "name": "@gazzadownunder/fastmcp",
   "version": "1.0.0",
   "main": "dist/FastMCP.js",
   "scripts": {
@@ -27,7 +27,7 @@
     "execa": "^9.6.0",
     "file-type": "^21.0.0",
     "fuse.js": "^7.1.0",
-    "mcp-proxy": "git+https://github.com/gazzadownunder/mcp-proxy.git#auth-issue",
+    "@gazzadownunder/mcp-proxy": "github:gazzadownunder/mcp-oauth-obo#chore/scope-package-name",
     "strict-event-emitter-types": "^2.0.0",
     "undici": "^7.13.0",
     "uri-templates": "^0.2.0",
